# lpnu

./: .gitignore
12NumeralMethods/: cramer_method.py  data.csv  dichotomy_method.py  gauss_method.py  inverse_matrix_method.py  iteration_nonlinear_method.py  newton_nonlinear_method.py  newton_polynomial_method.py  square_root_method.py
12NumeralMethods/lab1/: lab1.tex
12NumeralMethods/lab10/: lab10.tex
12NumeralMethods/lab2/: lab2.tex
12NumeralMethods/lab4/: lab4.tex
12NumeralMethods/lab6/: lab6.tex
12NumeralMethods/lab7/: lab7.tex
12NumeralMethods/lab8/: lab8.tex
12ObjectOrientedProgramming/cw/: blood.cpp  cw.tex  cw.toc  mainwindow.ui
12ObjectOrientedProgramming/lab9new/: wsvipclient.cpp
21AlgorithmsAndDataStructures/lab10/: Cargo.toml
21AlgorithmsAndDataStructures/lab2/: lab2.tex
21AlgorithmsAndDataStructures/lab2/ads2/: Cargo.toml
21AlgorithmsAndDataStructures/lab2/ads2/src/: sort.rs
21AlgorithmsAndDataStructures/lab3/: lab3.tex
21AlgorithmsAndDataStructures/lab6/: index.html
21AlgorithmsAndDataStructures/lab8/: lab8.tex
21ComputerArchitecture/lab11/: lab11.tex
21ComputerArchitecture/lab3/: lab3.docx
21ComputerArchitecture/lab4/: lab4.tex
21ComputerArchitecture/lab7/: lab7.tex
21ComputerArchitecture/lab8/: lab8.tex
21ComputerArchitecture/r/: r.tex
21ComputerArchitecture/r2/: r  r.tex
21OperatingSystems/lab2/: lab2.tex
21OperatingSystems/lab3/: lab3.tex  lab3process.cpp
21OperatingSystems/lab4/: process.cpp  run.sh
21OperatingSystems/lab6/: lab6.tex
21Statistics/: lab1.xlsx
22BasicOfElectronics/lab3/: lab3.tex
22BasicOfElectronics/lab5/: lab5.tex
22BasicOfElectronics/lab6/: lab6.tex
22BasicOfElectronics/lab7/: lab7.tex
22BasicOfNetworks/lab2/: lab2.tex
22BasicOfNetworks/lab3/: lab3.tex
22BusinessPlanningAndProjectManagement/: document.out
31ComputerGraphics/: lab.tex
31Databases/: db.py
31Databases/cw/: cw.tex  (+3 more)
32Practice/: document.tex
41SecurityOfProgramsAndData/lab4/: Cargo.toml  lab4.tex
41SecurityOfProgramsAndData/lab4/src/: main.rs
41SecurityOfProgramsAndData/lab5/: Cargo.toml  lab5.tex
41SecurityOfProgramsAndData/lab5/src/: main.rs
42Diploma/: Kovalenko_diploma.acn  Kovalenko_diploma.acr  Kovalenko_diploma.alg  Kovalenko_diploma.glg  Kovalenko_diploma.ist  Kovalenko_diploma.tex
42Practice/: document.tex
42SecurityOfProgramsAndData/lab1/: Cargo.toml  lab1.tex  output.txt
42SecurityOfProgramsAndData/lab1/src/: lib.rs  main.rs
42SecurityOfProgramsAndData/lab2/: Cargo.toml  lab2.tex
42SecurityOfProgramsAndData/lab2/src/: lib.rs  main.rs
42SecurityOfProgramsAndData/lab3/: Cargo.toml  lab3.tex
42SecurityOfProgramsAndData/lab3/src/: cipher.rs  error.rs  lib.rs  main.rs  word.rs
BPM/: document.out  document.tex  document.toc
BPU/: document.out  document.tex  document.toc
CHM/: integral.py  iteration_method.py  jacobi_method.py  lagrange_method.py  polynomial.py  secant_method.py  seidel_method.py
DB/: db.py
KG/: lab.out  lab.tex  lab.toc
NM/: integral.py  lu_decomposition_method.py  tangent_method.py
SDT/: document.tex
ST/: document.out  document.tex  document.toc
TPMS/: cheatsheet.tex
WEB/: package.json
(+773 files in other folders)
