[package]
name = "lab2"
version = "0.1.0"
edition = "2021"

[lib]
name = "md5"
path = "src/lib.rs"

[[bin]]
name = "md5"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.28.1", default-features = false, features = ["wayland", "wgpu", "default_fonts"] }
md5_not_my = { package = "md5", version = "0.7.0" }
rfd = "0.14.1"
